--- a/contact.html
+++ b/contact.html
@@ -1,196 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>
-      Dave Conneely Construction: Contact | Call Now For A Free Quote
-    </title>
-    <meta
-      name="description"
-      content="Contact Dave Conneely Construction for a free estimate or a free quote. Call or email today!"
-    />
-    <link rel="stylesheet" href="assets/css/normalize.css" async />
-    <link rel="stylesheet" href="assets/css/main.css" />
-    <meta property="og:site_name" content="Dave Conneely Construction" />
-    <meta
-      property="og:title"
-      content="Call now for a free quote or drop us an email!"
-    />
-    <meta
-      property="og:description"
-      content="Contact Dave Conneely Construction for a free estimate or a free quote. Call or email today!"
-    />
-    <meta property="og:locale" content="en_GB" />
-    <meta
-      property="og:image"
-      content="https://daveconneelyconstruction.com/assets/images/logo.svg"
-    />
-    <meta property="og:image:alt" content="Dave Conneely Construction Logo" />
-    <meta
-      property="og:url"
-      content="https://daveconneelyconstruction.com/contact.html"
-    />
-    <meta property="og:type" content="website" />
-    <meta property="twitter:card" content="summary" />
-    <meta property="twitter:site" content="@joshuaconneely" />
 
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="assets/images/apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="assets/images/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="assets/images/favicon-16x16.png"
-    />
-    <link rel="manifest" href="assets/site.webmanifest" />
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>
+    Dave Conneely Construction: Contact | Call Now For A Free Quote
+  </title>
+  <meta name="description"
+    content="Contact Dave Conneely Construction for a free estimate or a free quote. Call or email today!" />
+  <link rel="stylesheet" href="assets/css/normalize.css" async />
+  <link rel="stylesheet" href="assets/css/main.css" />
+  <meta property="og:site_name" content="Dave Conneely Construction" />
+  <meta property="og:title" content="Call now for a free quote or drop us an email!" />
+  <meta property="og:description"
+    content="Contact Dave Conneely Construction for a free estimate or a free quote. Call or email today!" />
+  <meta property="og:locale" content="en_GB" />
+  <meta property="og:image" content="https://daveconneelyconstruction.com/assets/images/logo.svg" />
+  <meta property="og:image:alt" content="Dave Conneely Construction Logo" />
+  <meta property="og:url" content="https://daveconneelyconstruction.com/contact.html" />
+  <meta property="og:type" content="website" />
+  <meta property="twitter:card" content="summary" />
+  <meta property="twitter:site" content="@joshuaconneely" />
 
-  <body id="dark">
-    <header class="main-header">
-      <div class="container grid">
-        <div class="logo">
-          <a href="index.html">
-            <img src="assets/images/logo.svg" alt="Playhouses logo"
-          /></a>
-        </div>
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon-16x16.png" />
+  <link rel="manifest" href="assets/site.webmanifest" />
+</head>
 
-        <nav class="main-nav">
-          <ul class="unstyled-list">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="services.html">Services</a></li>
-            <li><a href="gallery.html">Gallery</a></li>
-            <li><a href="contact.html">Contact</a></li>
-          </ul>
-        </nav>
-
-        <div class="nav-toggle">
-          <div class="hamburger"></div>
-        </div>
+<body id="dark">
+  <header class="main-header">
+    <div class="container grid">
+      <div class="header-logo">
+        <a href="index.html">
+          <img src="./assets/images/logo.webp" alt="Playhouses logo" /></a>
       </div>
-    </header>
 
-    <!-- ====contact== -->
+      <nav class="main-nav">
+        <ul class="unstyled-list">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="gallery.html">Gallery</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
 
-    <div class="container">
-      <h2 class="contact">
-        Give us a call at <a href="tel:+353873711042">087 3711042</a>
-      </h2>
-      <h2 class="contact">
-        Or send us an email at
-        <a href="mailto:conneelydave@hotmail.com"> conneelydave@hotmail.com </a>
-      </h2>
-
-      <div class="fcf-body">
-        <div id="fcf-form">
-          <h3 class="fcf-h3">Contact us</h3>
-
-          <form
-            id="fcf-form-id"
-            class="fcf-form-class"
-            method="post"
-            action="contact-form-process.php"
-          >
-            <div class="fcf-form-group">
-              <label for="Name" class="fcf-label">Your name</label>
-              <div class="fcf-input-group">
-                <input
-                  type="text"
-                  id="Name"
-                  name="Name"
-                  class="fcf-form-control"
-                  required
-                />
-              </div>
-            </div>
-
-            <div class="fcf-form-group">
-              <label for="Email" class="fcf-label">Your email address</label>
-              <div class="fcf-input-group">
-                <input
-                  type="email"
-                  id="Email"
-                  name="Email"
-                  class="fcf-form-control"
-                  required
-                />
-              </div>
-            </div>
-
-            <div class="fcf-form-group">
-              <label for="Message" class="fcf-label">Your message</label>
-              <div class="fcf-input-group">
-                <textarea
-                  id="Message"
-                  name="Message"
-                  class="fcf-form-control"
-                  rows="6"
-                  maxlength="3000"
-                  required
-                ></textarea>
-              </div>
-            </div>
-
-            <div class="fcf-form-group">
-              <button
-                type="submit"
-                id="fcf-button"
-                class="fcf-btn fcf-btn-primary fcf-btn-lg fcf-btn-block"
-              >
-                Send Message
-              </button>
-            </div>
-          </form>
-        </div>
+      <div class="nav-toggle">
+        <div class="hamburger"></div>
       </div>
     </div>
+  </header>
 
-    <!--=======Footer========-->
+  <div class="spacer"></div>
 
-    <footer>
-      <div class="container container-footer">
-        <div class="footer-logo">
-          <img
-            src="assets/images/logo.svg"
-            alt="Dave Conneely Construction Logo"
-          />
-        </div>
-        <nav class="footer-nav">
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="services.html">Services</a></li>
-            <li><a href="gallery.html">Gallery</a></li>
-            <li><a href="contact.html">Contact</a></li>
-          </ul>
-        </nav>
+  <div class="container">
+    <h2 class="contact">
+      Give us a call at <a href="tel:+353873711042">087 3711042</a>
+    </h2>
+    <h2 class="contact">
+      Or send us an email at
+      <a href="mailto:conneelydave@hotmail.com"> conneelydave@hotmail.com </a>
+    </h2>
+
+    <div class="fcf-body">
+      <div id="fcf-form">
+        <h3 class="fcf-h3">Contact us</h3>
+
+        <form id="fcf-form-id" class="fcf-form-class" method="post" action="contact-form-process.php">
+          <div class="fcf-form-group">
+            <label for="Name" class="fcf-label">Your name</label>
+            <div class="fcf-input-group">
+              <input type="text" id="Name" name="Name" class="fcf-form-control" required />
+            </div>
+          </div>
+
+          <div class="fcf-form-group">
+            <label for="Email" class="fcf-label">Your email address</label>
+            <div class="fcf-input-group">
+              <input type="email" id="Email" name="Email" class="fcf-form-control" required />
+            </div>
+          </div>
+
+          <div class="fcf-form-group">
+            <label for="Message" class="fcf-label">Your message</label>
+            <div class="fcf-input-group">
+              <textarea id="Message" name="Message" class="fcf-form-control" rows="6" maxlength="3000"
+                required></textarea>
+            </div>
+          </div>
+
+          <div class="fcf-form-group">
+            <button type="submit" id="fcf-button" class="fcf-btn fcf-btn-primary fcf-btn-lg fcf-btn-block">
+              Send Message
+            </button>
+          </div>
+        </form>
       </div>
+    </div>
+  </div>
 
-      <div class="footer-text">
-        <p>Copyright © Dave Conneely 2022. All Rights Reserved.</p>
-        <p>
-          Created by
-          <a href="https://joshuaconneely.com">Joshua Conneely</a>
-        </p>
+  <!--=======Footer========-->
+
+  <footer>
+    <div class="container container-footer">
+      <div class="footer-logo">
+        <img src="assets/images/logo.webp" alt="Dave Conneely Construction Logo" />
       </div>
-    </footer>
+      <nav class="footer-nav">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="gallery.html">Gallery</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
 
-    <!--=======Javascript========-->
-    <script
-      src="https://code.jquery.com/jquery-2.2.4.min.js"
-      integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
-      crossorigin="anonymous"
-      async
-    ></script>
-    <script src="assets/js/scripts.js" async></script>
-  </body>
+    <div class="footer-text">
+      <p>Copyright © Dave Conneely 2022. All Rights Reserved.</p>
+      <p>
+        Created by
+        <a href="mailto:hello@joshuaconneely.com">Joshua Conneely</a>
+      </p>
+    </div>
+  </footer>
+
+  <script src="assets/js/scripts.js" async></script>
+</body>
+
 </html>
