--- a/index.html
+++ b/index.html
@@ -1,205 +1,177 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>
-      Dave Conneely Construction: Home | Playhouses, Garden Removals & Safety
-      Matting
-    </title>
-    <meta
-      name="description"
-      content="Dave Conneely Construction is a building contractor in the Galway Area. We offer a variety of services including playhouse installation, safety matting and home improvement projects."
-    />
-    <link rel="stylesheet" href="assets/css/normalize.css" async/>
-    <link rel="stylesheet" href="assets/css/main.css" />
 
-    <meta property="og:site_name" content="Dave Conneely Construction" />
-    <meta
-      property="og:title"
-      content="Call now for a free quote or drop us an email!"
-    />
-    <meta
-      property="og:description"
-      content="I am a contractor in the Galway Area. We offer a variety of services including playhouse installation, safety matting and home improvement projects.Contact me for a free estimate or a free quote. Call or email today!"
-    />
-    <meta property="og:locale" content="en_GB" />
-    <meta
-      property="og:image"
-      content="https://daveconneelyconstruction.com/assets/images/logo.svg"
-    />
-    <meta property="og:image:alt" content="Dave Conneely Construction Logo" />
-    <meta
-      property="og:url"
-      content="https://daveconneelyconstruction.com/index.html"
-    />
-    <meta property="og:type" content="website" />
-    <meta property="twitter:card" content="summary" />
-    <meta property="twitter:site" content="@joshuaconneely" />
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>
+    Dave Conneely Construction: Home | Playhouses, Garden Removals & Safety
+    Matting
+  </title>
+  <meta name="description"
+    content="Dave Conneely Construction is a building contractor in the Galway Area. We offer a variety of services including playhouse installation, safety matting and home improvement projects." />
+  <link rel="stylesheet" href="assets/css/normalize.css" async />
+  <link rel="stylesheet" href="assets/css/main.css" />
 
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="assets/images/apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="assets/images/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="assets/images/favicon-16x16.png"
-    />
-    <link rel="manifest" href="assets/site.webmanifest" />
-  </head>
+  <meta property="og:site_name" content="Dave Conneely Construction" />
+  <meta property="og:title" content="Call now for a free quote or drop us an email!" />
+  <meta property="og:description"
+    content="I am a contractor in the Galway Area. We offer a variety of services including playhouse installation, safety matting and home improvement projects.Contact me for a free estimate or a free quote. Call or email today!" />
+  <meta property="og:locale" content="en_GB" />
+  <meta property="og:image" content="https://daveconneelyconstruction.com/assets/images/logo.webp" />
+  <meta property="og:image:alt" content="Dave Conneely Construction Logo" />
+  <meta property="og:url" content="https://daveconneelyconstruction.com/index.html" />
+  <meta property="og:type" content="website" />
+  <meta property="twitter:card" content="summary" />
+  <meta property="twitter:site" content="@joshuaconneely" />
 
-  <body>
-    <header class="main-header">
-      <div class="container grid">
-        <div class="logo">
-          <a href="index.html">
-            <img src="assets/images/logo.svg" alt="Playhouses logo"
-          /></a>
-        </div>
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon-16x16.png" />
+  <link rel="manifest" href="assets/site.webmanifest" />
+</head>
 
-        <nav class="main-nav">
-          <ul class="unstyled-list">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="services.html">Services</a></li>
-            <li><a href="gallery.html">Gallery</a></li>
-            <li><a href="contact.html">Contact</a></li>
-          </ul>
-        </nav>
-
-        <div class="nav-toggle">
-          <div class="hamburger"></div>
-        </div>
+<body>
+  <header class="main-header">
+    <div class="container grid">
+      <div class="header-logo">
+        <a href="index.html">
+          <img src="./assets/images/logo.webp" alt="Playhouses logo" /></a>
       </div>
-    </header>
 
-    <!--=====Hero Area========-->
+      <nav class="main-nav">
+        <ul class="unstyled-list">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="gallery.html">Gallery</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
 
-    <section class="hero">
-      <div class="container grid">
-        <div class="hero-text">
-          <h1>Playhouses & Rubber Matting Installation</h1>
-        </div>
-
-        <a href="contact.html" class="button cta-btn">Contact Us</a>
+      <div class="nav-toggle">
+        <div class="hamburger"></div>
       </div>
-    </section>
+    </div>
+  </header>
 
-    <!--=====Sales Points========-->
+  <!--=====Hero Area========-->
 
-    <section class="boxed-sales-points">
-      <div class="container column">
-        <div class="sales-point-box">
-          <img class="icon" src="assets/images/sales-point-1.svg" alt="" />
-          <h3>Ground Preperation</h3>
-          <p>
-            We will prepare the ground and pour concrete to make sure your new
-            playhouse has a solid foundation.
-          </p>
-          <a class="button cta-btn" href="services.html">See More</a>
-        </div>
-
-        <div class="sales-point-box">
-          <img class="icon" src="assets/images/sales-point-2.svg" alt="" />
-          <h3>Rubber Matting</h3>
-          <p>
-            Rubber matting will keep your kid safe from falls and other mishaps
-            while being maintance free and looking good.
-          </p>
-          <a class="button cta-btn" href="services.html">See More</a>
-        </div>
-
-        <div class="sales-point-box">
-          <img class="icon" src="assets/images/sales-point-3.svg" alt="" />
-          <h3>Installation</h3>
-          <p>
-            We will install and make sure the new playhouse is secured safely to
-            the foundation and remains for years to come.
-          </p>
-          <a class="button cta-btn" href="services.html">See More</a>
-        </div>
+  <section class="hero">
+    <div class="container grid">
+      <div class="hero-text">
+        <h1>Playhouses & Rubber Matting Installation</h1>
       </div>
-    </section>
 
-    <!--=====Our Story========-->
+      <a href="contact.html" class="button cta-btn">Contact Us</a>
+    </div>
+  </section>
 
-    <section class="story">
-      <div class="container grid">
-        <h2 class="title">Our Story</h2>
+  <!--=====Sales Points========-->
 
+  <section class="boxed-sales-points">
+    <div class="container column">
+      <div class="sales-point-box">
+        <img class="icon" src="assets/images/sales-point-1.svg" alt="" />
+        <h3>Ground Preperation</h3>
         <p>
-          From Co. Galway, We have been providing quality construction services
-          to our clients for over 30 years. We pride ourselves on our quality
-          workmanship. We are a team of highly skilled and experienced
-          professionals who are dedicated to providing the best service to our
-          clients. We pay special attention to the quality of our work and
-          providing a safe playarea for our clients. We offer a range of
-          services to our clients including: ground preparation, rubber safety
-          matting, and playhouse installation, more of which can be seen
-          <a href="services.html" class="body-link">here</a>.
+          We will prepare the ground and pour concrete to make sure your new
+          playhouse has a solid foundation.
         </p>
+        <a class="button cta-btn" href="services.html">See More</a>
       </div>
-    </section>
 
-    <!--=====sales points ========-->
+      <div class="sales-point-box">
+        <img class="icon" src="assets/images/sales-point-2.svg" alt="" />
+        <h3>Rubber Matting</h3>
+        <p>
+          Rubber matting will keep your kid safe from falls and other mishaps
+          while being maintance free and looking good.
+        </p>
+        <a class="button cta-btn" href="services.html">See More</a>
+      </div>
 
-    <section class="sales-points">
-      <div class="container grid">
-        <h2 class="title">Why Choose Us?</h2>
+      <div class="sales-point-box">
+        <img class="icon" src="assets/images/sales-point-3.svg" alt="" />
+        <h3>Installation</h3>
+        <p>
+          We will install and make sure the new playhouse is secured safely to
+          the foundation and remains for years to come.
+        </p>
+        <a class="button cta-btn" href="services.html">See More</a>
+      </div>
+    </div>
+  </section>
 
-        <div class="column">
-          <div class="sales-point">
-            <img class="icon" src="assets/images/why-us-point-1.svg" alt="" />
-            <h3>Local</h3>
-            <p>
-              Based in County Galway, and have worked here for years we have
-              come to know the area and the people very well.
-            </p>
-          </div>
+  <!--=====Our Story========-->
 
-          <div class="sales-point">
-            <img class="icon" src="assets/images/why-us-point-2.svg" alt="" />
-            <h3>Irish Owned</h3>
-            <p>
-              Were fully irish owned and source all our materials and playhouses
-              in Ireland and try our best to get local when we can to support
-              the local community.
-            </p>
-          </div>
+  <section class="story">
+    <div class="container grid">
+      <h2 class="title">Our Story</h2>
 
-          <div class="sales-point">
-            <img class="icon" src="assets/images/why-us-point-3.svg" alt="" />
-            <h3>Experienced</h3>
-            <p>
-              With 30 years in construction and 5 years in installing playground
-              we know what were at and can guarantee quality and expertise.
-            </p>
-          </div>
+      <p>
+        From Co. Galway, We have been providing quality construction services
+        to our clients for over 30 years. We pride ourselves on our quality
+        workmanship. We are a team of highly skilled and experienced
+        professionals who are dedicated to providing the best service to our
+        clients. We pay special attention to the quality of our work and
+        providing a safe playarea for our clients. We offer a range of
+        services to our clients including: ground preparation, rubber safety
+        matting, and playhouse installation.
+      </p>
+    </div>
+  </section>
+
+  <!--=====sales points ========-->
+
+  <section class="sales-points">
+    <div class="container grid">
+      <h2 class="title">Why Choose Us?</h2>
+
+      <div class="column">
+        <div class="sales-point">
+          <img class="icon" src="assets/images/why-us-point-1.svg" alt="" />
+          <h3>Local</h3>
+          <p>
+            Based in County Galway, and have worked here for years we have
+            come to know the area and the people very well.
+          </p>
+        </div>
+
+        <div class="sales-point">
+          <img class="icon" src="assets/images/why-us-point-2.svg" alt="" />
+          <h3>Irish Owned</h3>
+          <p>
+            Were fully irish owned and source all our materials and playhouses
+            in Ireland and try our best to get local when we can to support
+            the local community.
+          </p>
+        </div>
+
+        <div class="sales-point">
+          <img class="icon" src="assets/images/why-us-point-3.svg" alt="" />
+          <h3>Experienced</h3>
+          <p>
+            With 30 years in construction and 5 years in installing playground
+            we know what were at and can guarantee quality and expertise.
+          </p>
         </div>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <!--=======Call To Action========-->
+  <!--=======Call To Action========-->
 
-    <section class="cta">
-      <div class="container container-cta">
-        <h2 class="title cta-title">CALL NOW FOR A <span>FREE QUOTE</span></h2>
-        <a href="contact.html" class="button cta-btn">Contact Us</a>
-      </div>
-    </section>
+  <section class="cta">
+    <div class="container container-cta">
+      <h2 class="title cta-title">CALL NOW FOR A <span>FREE QUOTE</span></h2>
+      <a href="contact.html" class="button cta-btn">Contact Us</a>
+    </div>
+  </section>
 
-    <!--=======Projects========-->
-    <!-- TODO -->
-    <!-- <section class="projects">
+  <!--=======Projects========-->
+  <!-- TODO -->
+  <!-- <section class="projects">
 
         <div class="container grid">
             <h2 class="title ">Our Projects</h2>
@@ -215,63 +187,48 @@
 
     </section> -->
 
-    <!--=======Footer========-->
+  <!--=======Footer========-->
 
-    <footer>
-      <div class="container container-footer">
-        <div class="logo footer-logo">
-          <img
-            src="assets/images/logo.svg"
-            alt="Dave Conneely Construction Logo"
-          />
-        </div>
-        <nav class="footer-nav">
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="services.html">Services</a></li>
-            <li><a href="gallery.html">Gallery</a></li>
-            <li><a href="contact.html">Contact</a></li>
-          </ul>
-        </nav>
+  <footer>
+    <div class="container container-footer">
+      <div class="logo footer-logo">
+        <img src="assets/images/logo.webp" alt="Dave Conneely Construction Logo" />
       </div>
+      <nav class="footer-nav">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="gallery.html">Gallery</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
 
-      <div class="footer-text">
-        <p>Copyright © Dave Conneely 2022. All Rights Reserved.</p>
-        <p>
-          Created by
-          <a href="https://joshuaconneely.com">Joshua Conneely</a>
-        </p>
-      </div>
-    </footer>
+    <div class="footer-text">
+      <p>Copyright © Dave Conneely 2022. All Rights Reserved.</p>
+      <p>
+        Created by
+        <a href="mailto:hello@joshuaconneely.com">Joshua Conneely</a>
+      </p>
+    </div>
+  </footer>
 
-    <!--=======Javascript========-->
-    <script
-      src="https://code.jquery.com/jquery-2.2.4.min.js"
-      integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
-      crossorigin="anonymous"
-      async
-    ></script>
-    <script src="assets/js/scripts.js" async></script>
+  <script src="assets/js/scripts.js" async></script>
 
-    <!-- Cloudflare Web Analytics -->
-    <script
-      defer
-      src="https://static.cloudflareinsights.com/beacon.min.js"
-      data-cf-beacon='{"token": "f3e59890944845fa93625cbae427e3c3"}'
-    ></script>
+  <!-- Cloudflare Web Analytics -->
+  <script defer src="https://static.cloudflareinsights.com/beacon.min.js"
+    data-cf-beacon='{"token": "f3e59890944845fa93625cbae427e3c3"}'></script>
 
-    <!-- PanelBear -->
-    <script
-      async
-      src="https://cdn.panelbear.com/analytics.js?site=INddPDgHqA2"
-    ></script>
-    <script>
-      window.panelbear =
-        window.panelbear ||
-        function () {
-          (window.panelbear.q = window.panelbear.q || []).push(arguments);
-        };
-      panelbear("config", { site: "INddPDgHqA2" });
-    </script>
-  </body>
+  <!-- PanelBear -->
+  <script async src="https://cdn.panelbear.com/analytics.js?site=INddPDgHqA2"></script>
+  <script>
+    window.panelbear =
+      window.panelbear ||
+      function () {
+        (window.panelbear.q = window.panelbear.q || []).push(arguments);
+      };
+    panelbear("config", { site: "INddPDgHqA2" });
+  </script>
+</body>
+
 </html>
