--- a/services.html
+++ b/services.html
@@ -1,206 +1,167 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>
-      Dave Conneely Construction: Services | Playhouse installation, Safety
-      rubber matting & Home improvement projects
-    </title>
-    <meta
-      name="description"
-      content="Services offered by Dave Conneely Construction include but are not limited to: Playhouse installation, Safety rubber matting, Home improvement projects, Bark mulch, Garden removal, and more."
-    />
-    <link rel="stylesheet" href="assets/css/normalize.css" async/>
-    <link rel="stylesheet" href="assets/css/main.css" />
 
-    <meta property="og:site_name" content="Dave Conneely Construction" />
-    <meta
-      property="og:title"
-      content="Playhouse installation, Safety
-      rubber matting & Home improvement projects"
-    />
-    <meta
-      property="og:description"
-      content="Services offeredby Dave Conneely Construction include but are not limited to: Playhouse installation, Safety rubber matting, Home improvement projects, Bark mulch, Garden removal, and more. Call for a quote."
-    />
-    <meta property="og:locale" content="en_GB" />
-    <meta
-      property="og:image"
-      content="https://daveconneelyconstruction.com/assets/images/logo.svg"
-    />
-    <meta property="og:image:alt" content="Dave Conneely Construction Logo" />
-    <meta
-      property="og:url"
-      content="https://daveconneelyconstruction.com/services.html"
-    />
-    <meta property="og:type" content="website" />
-    <meta property="twitter:card" content="summary" />
-    <meta property="twitter:site" content="@joshuaconneely" />
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>
+    Dave Conneely Construction: Services | Playhouse installation, Safety
+    rubber matting & Home improvement projects
+  </title>
+  <meta name="description"
+    content="Services offered by Dave Conneely Construction include but are not limited to: Playhouse installation, Safety rubber matting, Home improvement projects, Bark mulch, Garden removal, and more." />
+  <link rel="stylesheet" href="assets/css/normalize.css" async />
+  <link rel="stylesheet" href="assets/css/main.css" />
 
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="assets/images/apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="assets/images/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="assets/images/favicon-16x16.png"
-    />
-    <link rel="manifest" href="assets/site.webmanifest" />
-  </head>
+  <meta property="og:site_name" content="Dave Conneely Construction" />
+  <meta property="og:title" content="Playhouse installation, Safety
+      rubber matting & Home improvement projects" />
+  <meta property="og:description"
+    content="Services offeredby Dave Conneely Construction include but are not limited to: Playhouse installation, Safety rubber matting, Home improvement projects, Bark mulch, Garden removal, and more. Call for a quote." />
+  <meta property="og:locale" content="en_GB" />
+  <meta property="og:image" content="https://daveconneelyconstruction.com/assets/images/logo.webp" />
+  <meta property="og:image:alt" content="Dave Conneely Construction Logo" />
+  <meta property="og:url" content="https://daveconneelyconstruction.com/services.html" />
+  <meta property="og:type" content="website" />
+  <meta property="twitter:card" content="summary" />
+  <meta property="twitter:site" content="@joshuaconneely" />
 
-  <body id="services">
-    <header class="main-header">
-      <div class="container grid">
-        <div class="logo">
-          <a href="index.html">
-            <img src="assets/images/logo.svg" alt="Playhouses logo"
-          /></a>
-        </div>
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon-16x16.png" />
+  <link rel="manifest" href="assets/site.webmanifest" />
+</head>
 
-        <nav class="main-nav">
-          <ul class="unstyled-list">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="services.html">Services</a></li>
-            <li><a href="gallery.html">Gallery</a></li>
-            <li><a href="contact.html">Contact</a></li>
-          </ul>
-        </nav>
-
-        <div class="nav-toggle">
-          <div class="hamburger"></div>
-        </div>
-      </div>
-    </header>
-
-    <!--=======Points========-->
-
-    <div class="container">
-      <div class="column">
-        <div class="col-2">
-          <h2 class="title">Rubber Safety Matting</h2>
-          <p>
-            Our rubber saftey matting is designed to reduce the risk of injury
-            from slip, trips and falls. Manufactured from a combination of
-            recycled and virgin rubber and comes in different colours. The
-            matting is in a tile format which allows replacement of a damaged
-            tile.
-          </p>
-        </div>
-
-        <div class="col-2">
-          <img
-            src="/assets/images/RedPlayMats.webp"
-            alt="Red Rubber Safety Matting"
-          />
-        </div>
+<body id="services">
+  <header class="main-header">
+    <div class="container grid">
+      <div class="header-logo">
+        <a href="index.html">
+          <img src="./assets/images/logo.webp" alt="Playhouses logo" /></a>
       </div>
 
-      <div class="column">
-        <div class="col-2">
-          <h2 class="title">Installation</h2>
-          <p>
-            Theres no need to worry about the installation we can handle all
-            that for you, from sourcing the materials and equipment to removing
-            excess soil and debris we have it all under control.
-          </p>
-        </div>
-        <div class="col-2">
-          <img src="/assets/images/playset.webp" alt="Playset" />
-        </div>
+      <nav class="main-nav">
+        <ul class="unstyled-list">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="gallery.html">Gallery</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+
+      <div class="nav-toggle">
+        <div class="hamburger"></div>
+      </div>
+    </div>
+  </header>
+
+  <div class="spacer"></div>
+
+  <div class="container">
+    <div class="column">
+      <div class="col-2">
+        <h2 class="title">Rubber Safety Matting</h2>
+        <p>
+          Our rubber saftey matting is designed to reduce the risk of injury
+          from slip, trips and falls. Manufactured from a combination of
+          recycled and virgin rubber and comes in different colours. The
+          matting is in a tile format which allows replacement of a damaged
+          tile.
+        </p>
       </div>
 
-      <div class="column">
-        <div class="col-2">
-          <h2 class="title">Foundation</h2>
-          <p>
-            With a strong concrete foundation your playhouse will not be easily
-            damaged in a storm or otherwise and will last. Combined with rubber
-            matting this makes for a great safe play area for the kids and is
-            also very low maintance with no trying to cut grass around the
-            playhouse and no pulling weeds from the matting and it has a
-            concrete base below.
-          </p>
-        </div>
-        <div class="col-2"></div>
-      </div>
-
-      <div class="column">
-        <div class="col-2">
-          <h2 class="title">Accessibility</h2>
-          <p>
-            We have a wide range of colours and sizes to suit any playhouse
-            size. We can also provide you with a custom design to suit your
-            needs.
-          </p>
-        </div>
-        <div class="col-2">
-          <img src="/assets/images/playground.webp" alt="Playground" />
-        </div>
-      </div>
-
-      <div class="column">
-        <div class="col-2">
-          <h2 class="title">Other Services</h2>
-          <ul>
-            <li>Bark mulch available for delivery.</li>
-            <li>
-              Tipper Van available, suitable for removal of gardens, stone and
-              small loads.
-            </li>
-            <li>Small dumper available also.</li>
-          </ul>
-        </div>
-        <div class="col-2"></div>
+      <div class="col-2">
+        <img src="/assets/images/RedPlayMats.webp" alt="Red Rubber Safety Matting" />
       </div>
     </div>
 
-    <!--=======Footer========-->
-
-    <footer>
-      <div class="container container-footer">
-        <div class="footer-logo">
-          <img
-            src="assets/images/logo.svg"
-            alt="Dave Conneely Construction Logo"
-          />
-        </div>
-        <nav class="footer-nav">
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="services.html">Services</a></li>
-            <li><a href="gallery.html">Gallery</a></li>
-            <li><a href="contact.html">Contact</a></li>
-          </ul>
-        </nav>
-      </div>
-
-      <div class="footer-text">
-        <p>Copyright © Dave Conneely 2022. All Rights Reserved.</p>
+    <div class="column">
+      <div class="col-2">
+        <h2 class="title">Installation</h2>
         <p>
-          Created by
-          <a href="https://joshuaconneely.com">Joshua Conneely</a>
+          Theres no need to worry about the installation we can handle all
+          that for you, from sourcing the materials and equipment to removing
+          excess soil and debris we have it all under control.
         </p>
       </div>
-    </footer>
+      <div class="col-2">
+        <img src="/assets/images/playset.webp" alt="Playset" />
+      </div>
+    </div>
 
-    <!--=======Javascript========-->
-    <script
-      src="https://code.jquery.com/jquery-2.2.4.min.js"
-      integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
-      crossorigin="anonymous"
-      async
-    ></script>
-    <script src="assets/js/scripts.js" async></script>
-  </body>
+    <div class="column">
+      <div class="col-2">
+        <h2 class="title">Foundation</h2>
+        <p>
+          With a strong concrete foundation your playhouse will not be easily
+          damaged in a storm or otherwise and will last. Combined with rubber
+          matting this makes for a great safe play area for the kids and is
+          also very low maintance with no trying to cut grass around the
+          playhouse and no pulling weeds from the matting and it has a
+          concrete base below.
+        </p>
+      </div>
+      <div class="col-2"></div>
+    </div>
+
+    <div class="column">
+      <div class="col-2">
+        <h2 class="title">Accessibility</h2>
+        <p>
+          We have a wide range of colours and sizes to suit any playhouse
+          size. We can also provide you with a custom design to suit your
+          needs.
+        </p>
+      </div>
+      <div class="col-2">
+        <img src="/assets/images/playground.webp" alt="Playground" />
+      </div>
+    </div>
+
+    <div class="column">
+      <div class="col-2">
+        <h2 class="title">Other Services</h2>
+        <ul>
+          <li>Bark mulch available for delivery.</li>
+          <li>
+            Tipper Van available, suitable for removal of gardens, stone and
+            small loads.
+          </li>
+          <li>Small dumper available also.</li>
+        </ul>
+      </div>
+      <div class="col-2"></div>
+    </div>
+  </div>
+
+  <!--=======Footer========-->
+
+  <footer>
+    <div class="container container-footer">
+      <div class="footer-logo">
+        <img src="assets/images/logo.webp" alt="Dave Conneely Construction Logo" />
+      </div>
+      <nav class="footer-nav">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="gallery.html">Gallery</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+
+    <div class="footer-text">
+      <p>Copyright © Dave Conneely 2022. All Rights Reserved.</p>
+      <p>
+        Created by
+        <a href="mailto:hello@joshuaconneely.com">Joshua Conneely</a>
+      </p>
+    </div>
+  </footer>
+
+  <script src="assets/js/scripts.js" async></script>
+</body>
+
 </html>
